--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -1,21 +1,13 @@
-<?php /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\ProductCarousel */ ?>
+<?php
+/** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\ProductCarousel */
+$componentConfiguration = $block->getData();
+$visibilityClass = $this
+    ->helper(\MageSuite\ContentConstructorFrontend\Helper\ComponentVisibility::class)
+    ->getVisibilityClass($componentConfiguration);
+?>
 <div class="cs-container">
     <div class="cs-container__inner">
-        <?php
-        $mobileComponentVisibility = $block->getData('componentVisibility')['mobile'];
-        $desktopComponentVisibility = $block->getData('componentVisibility')['desktop'];
-        $visibilityClass = '';
 
-        if (!$mobileComponentVisibility) {
-            $visibilityClass .= 'cs-display-controller--hidden-mobile';
-        }
-
-        if (!$desktopComponentVisibility) {
-            $visibilityClass .= 'cs-display-controller--hidden-desktop';
-        }
-
-        $showNavigation = $block->getShowNavigation() ?? $block->getVar('product_carousel/show_navigation');
-        ?>
         <div class="<?= $visibilityClass ?>">
             <div class="cs-products-promo">
                 <div class="cs-products-promo__carousel">
@@ -34,12 +26,12 @@
                     <?php if ($block->getVar('product_carousel/show_navigation')): ?>
                         <button class="cs-products-promo__nav cs-products-promo__nav--prev" type="button">
                             <svg class="cs-products-promo__nav-icon">
-                                <use xlink:href="<?=$block->getVar('product_carousel/icon/left')?>"></use>
+                                <use xlink:href="<?= $block->getVar('product_carousel/icon/left') ?>"></use>
                             </svg>
                         </button>
                         <button class="cs-products-promo__nav cs-products-promo__nav--next" type="button">
                             <svg class="cs-products-promo__nav-icon">
-                                <use xlink:href="<?=$block->getVar('product_carousel/icon/right')?>"></use>
+                                <use xlink:href="<?= $block->getVar('product_carousel/icon/right') ?>"></use>
                             </svg>
                         </button>
                     <?php endif; ?>
