--- a/view/frontend/templates/component/paragraph.phtml
+++ b/view/frontend/templates/component/paragraph.phtml
@@ -1,12 +1,12 @@
 <?php
 /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Paragraph */
 $componentConfiguration = $block->getData();
-$visibilityClass = $this
-    ->helper(\MageSuite\ContentConstructorFrontend\Helper\ComponentVisibility::class)
-    ->getVisibilityClass($componentConfiguration);
+
+/** @var \MageSuite\ContentConstructorFrontend\Model\Component\Paragraph $viewModel */
+$viewModel = $block->getViewModel();
 ?>
-<div class="<?=$visibilityClass?>">
-    <div class="cs-paragraph cs-paragraph--cols-<?=$block->getColumns()?> cs-paragraph--mode-<?=$componentConfiguration['scenarios']['reading']['id'] ?? ''?> | cs-cms-block">
-        <?=$block->getContent()?>
+<div class="<?=$block->getVisibilityClass()?>">
+    <div class="cs-paragraph cs-paragraph--cols-<?=$viewModel->getColumns()?> cs-paragraph--mode-<?=$componentConfiguration['scenarios']['reading']['id'] ?? ''?> | cs-cms-block">
+        <?=$viewModel->getContent()?>
     </div>
 </div>
