--- a/view/frontend/templates/component/separator.phtml
+++ b/view/frontend/templates/component/separator.phtml
@@ -1,11 +1,5 @@
-<?php
-/** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Button */
-$componentConfiguration = $block->getData();
-$visibilityClass = $this
-    ->helper(\MageSuite\ContentConstructorFrontend\Helper\ComponentVisibility::class)
-    ->getVisibilityClass($componentConfiguration);
-?>
-<div class="<?=$visibilityClass?>">
+<?php /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Separator */ ?>
+<div class="<?=$block->getVisibilityClass()?>">
     <hr class="cs-separator">
 </div>
 
