--- a/view/frontend/templates/component/hero_carousel.phtml
+++ b/view/frontend/templates/component/hero_carousel.phtml
@@ -1,9 +1,6 @@
 <?php
 /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\HeroCarousel */
 $componentConfiguration = $block->getData();
-$visibilityClass = $this
-    ->helper(\MageSuite\ContentConstructorFrontend\Helper\ComponentVisibility::class)
-    ->getVisibilityClass($componentConfiguration);
 
 /** @var \MageSuite\ContentConstructorFrontend\Model\Component\HeroCarousel $viewModel */
 $viewModel = $block->getViewModel();
@@ -20,7 +17,7 @@ if ($componentConfiguration['mobileDisplayVariant']['id'] == 'list') {
 ?>
 <div class="cs-container cs-container--edge-to-edge cs-container--noscroll ">
     <div class="cs-container__inner">
-        <div class="<?= $visibilityClass ?>">
+        <div class="<?=$block->getVisibilityClass()?>">
             <div class="cs-hero <?= $mobileDisplayVariantClass ?> cs-hero--centered">
                 <div class="cs-hero__carousel">
                     <div class="cs-hero__wrapper">
