--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -5,17 +5,19 @@ $componentConfiguration = $block->getData();
 /** @var \MageSuite\ContentConstructorFrontend\Model\Component\ProductCarousel $viewModel */
 $viewModel = $block->getViewModel();
 ?>
-<div class="cs-container">
+<div class="cs-container cs-container--products-carousel">
     <div class="cs-container__inner">
         <div class="<?=$block->getVisibilityClass()?>">
-            <div class="cs-products-promo">
-                <div class="cs-products-promo__carousel">
-                    <div class="cs-products-promo__wrapper">
-                        <ul class="cs-products-promo__slides">
+            <div class="cs-products-carousel">
+                <div class="cs-products-carousel__carousel">
+                    <div class="cs-products-carousel__wrapper">
+                        <ul class="cs-products-carousel__slides">
                             <?php $iterator = 1 ?>
                             <?php foreach ($viewModel->getProducts() as $product): ?>
-                                <li class="cs-products-promo__slide cs-grid-product cs-grid-product--in-carousel">
-                                    <?= $viewModel->renderProductTile($product, $iterator) ?>
+                                <li class="cs-products-carousel__slide">
+                                    <div class="cs-products-carousel__product-tile">
+                                        <?= $viewModel->renderProductTile($product, $iterator) ?>
+                                    </div>
                                 </li>
                                 <?php $iterator++ ?>
                             <?php endforeach; ?>
@@ -23,20 +25,20 @@ $viewModel = $block->getViewModel();
                     </div>
 
                     <?php if ($block->getVar('product_carousel/show_navigation')): ?>
-                        <button class="cs-products-promo__nav cs-products-promo__nav--prev" type="button">
-                            <svg class="cs-products-promo__nav-icon">
+                        <button class="cs-products-carousel__nav cs-products-carousel__nav--prev" type="button">
+                            <svg class="cs-products-carousel__nav-icon">
                                 <use xlink:href="<?= $block->getVar('product_carousel/icon/left') ?>"></use>
                             </svg>
                         </button>
-                        <button class="cs-products-promo__nav cs-products-promo__nav--next" type="button">
-                            <svg class="cs-products-promo__nav-icon">
+                        <button class="cs-products-carousel__nav cs-products-carousel__nav--next" type="button">
+                            <svg class="cs-products-carousel__nav-icon">
                                 <use xlink:href="<?= $block->getVar('product_carousel/icon/right') ?>"></use>
                             </svg>
                         </button>
                     <?php endif; ?>
 
                     <?php if ($block->getVar('product_carousel/show_pagination')): ?>
-                        <ul class="cs-products-promo__pagination"></ul>
+                        <ul class="cs-products-carousel__pagination"></ul>
                     <?php endif; ?>
                 </div>
             </div>
